--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -65,7 +65,9 @@ library("xtable")
 library("grid")
 library("gridExtra")
 library("ape")
+library("EBImage")
 library("ggtree")
+library("RSQLite")
 library("topGO")
 library("org.Hs.eg.db")
 library("scales")
