--- a/manuscript/supplemental_material.Rnw
+++ b/manuscript/supplemental_material.Rnw
@@ -121,6 +121,7 @@ library("scales")
 library("gridExtra")
 library("ape")
 library("ggtree")
+library("RSQLite")
 library("topGO")
 library("org.Hs.eg.db")
 library("magrittr")
