--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -222,17 +222,18 @@ mammal \sep  gene expression \sep evolution \sep RNA-seq \sep placenta
 
 \section{Introduction}
 
-The placenta is arguably one of the most variable organs in different
-species of mammals in terms of the shape of attachment
-(\Sexpr{english.join(placenta_classification[,levels(as.factor(shape))])}),
-degree of intimacy between fetal tissues and maternal tissues
-(\Sexpr{english.join(placenta_classification[,levels(as.factor(intimacy))])}),
-and degree of interdigitation of maternal and fetal tissues
-(\Sexpr{english.join(placenta_classification[,levels(as.factor(interdigitation))])})
-while its primary functions (transfer of nutrients and oxygen to the
-fetus, removal of wastes and carbon dioxide) are strongly conserved.
-
 Even though the placenta's primary function is conserved among
+mammals, it varies widely in terms of the shape of attachment, degree
+of intimacy between fetal tissues and maternal tissues and degree of
+interdigitation of maternal and fetal tissues in different species of
+mammals
+\cite{Mossman.1987:vertebratefetalmembranes,Moffett.ea2006:Immunologyofplacentationin}
+(Supplemental \cref{tab:placental_classification}). Mammals also
+differ drastically in the number and size of their offspring, as well
+as the length of gestation; these traits are often with specific
+aspects of placental morphology
+\cite{Capellini.ea2011:Placentationandmaternalinvestment}
+(Supplemental \cref{tab:gestational_periods}).
 
 \section{Methods}
 
