--- a/manuscript/supplemental_material.Rnw
+++ b/manuscript/supplemental_material.Rnw
@@ -175,7 +175,7 @@ load("../go_annotation/go_tissue_analysis")
 \subsection{Placental Classification}
 
 <<placental_classification,echo=FALSE,results="hide",cache.extra=file.info(dir("../data","placenta.*classification.*",full.names=TRUE))[,"mtime"]>>=
-placenta_classification <- fread("../data/placental_classification.txt")
+load("../data/placenta_classification")
 load("../data/placenta_classification_p")
 for (mf.bp in c("mf","bp")) {
     for (class in c("interdigitation","barrier","shape")) {
@@ -187,7 +187,7 @@ for (mf.bp in c("mf","bp")) {
 
 \begin{table}[hb]
 <<placental_classification_table,echo=FALSE,results="asis">>=
-print(xtable(placental.classification,
+print(xtable(placenta_classification,
              display=c("s","s","s","s","s"),
              align=c("c","c","c","c","c")),
       include.rownames=FALSE,
