--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -65,7 +65,6 @@ library("xtable")
 library("grid")
 library("gridExtra")
 library("ape")
-library("EBImage")
 library("ggtree")
 library("RSQLite")
 library("topGO")
@@ -386,7 +385,7 @@ species is generally perceived to be $\approx 1$ million years
 species.tree <- 
     read.tree(text="(Monodelphis_domestica,((Dasypus_novemcinctus,Loxodonta_africana)Atlantogenata,((Canis_familiaris,(Equus_caballus,(Sus_scrofa,(Ovis_aries,Bos_taurus))))Laurasiatheria,(((Spalax_carmeli,Spalax_galili),Mus_Musculus)Rodentia,((Pan_paniscus,Homo_sapiens),Ateles_fuciceps)Primates)Euarchontoglires)Boreoeutheria)Eutheria);")
 pp <- ggtree(species.tree)+
-    geom_text(aes(label=label),hjust=0,size=5,fontface="italic")+
+    geom_text(aes(label=gsub("_"," ",label)),hjust=0,size=5,fontface="italic")+
     scale_x_continuous(limits=c(0,10))
 print(pp %>%
       ## monodelphis
